--- a/TODO
+++ b/TODO
@@ -1,9 +1,24 @@
+Monday, May 27, 2019:
+  ☐ add information to About page
+  ☐ add MainPage
+    ☐ contains Welcome message and quick How To
+  ☐ clickable Logotype
+
+Wednesday, May 22, 2019:
+  ✘ fix getUserByEmail to work for signup and login methods @cancelled(19-05-27 17:04)
+  ✘ handle errors in login controller @cancelled(19-05-27 17:04)
+  ✘ logout controller @cancelled(19-05-27 17:05)
+  ✘ track user actions and store them in DB @cancelled(19-05-27 17:05)
+    ✘ create DB table @cancelled(19-05-27 17:05)
+  
 Thursday, May 2, 2019:
   ☐ backend
-    ☐ refactor actions
-    ☐ try to implement algorithms and encodings from scratch
-    ☐ connect pgsql db
-  ☐ download output feature
-  ☐ decrypt containers/page
-  ☐ create custom hooks for algorithms and encodings
-    ✔ store algos and encodings in globalState @done(19-05-02 22:06)
+    ☐ auth integrated with postgresql
+    ✔ refactor actions @done(19-05-09 21:37)
+    ✘ try to implement algorithms and encodings from scratch @cancelled(19-05-27 17:05)
+    ✔ connect pgsql db @done(19-05-09 21:37)
+  ✔ download encrypted result as JSON @done(19-05-27 17:06)
+  ✔ upload JSON-file and insert data to form fields (decrypt feature) @done(19-05-27 17:06)
+  ✔ decrypt containers/page @done(19-05-09 21:37)
+  ✘ create custom hooks for algorithms and encodings @cancelled(19-05-27 17:06)
+  ✔ store algos and encodings in globalState @done(19-05-02 22:06)
